--- a/sampleapps/spring-petclinic/Dockerfile
+++ b/sampleapps/spring-petclinic/Dockerfile
@@ -1,6 +1,5 @@
 FROM openjdk:8-jdk-alpine
-ARG DEPENDENCY=target/dependency
-COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY ${DEPENDENCY}/META-INF /app/META-INF
-COPY ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","petclinic.Application"]
+VOLUME /tmp
+ARG JAR_FILE
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
