--- a/.github/workflows/spring-petclinic-build-image.yml
+++ b/.github/workflows/spring-petclinic-build-image.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+env:
+  IMAGE_NAME: spring-petclinic:$(date +%s)
+
 jobs:
 
   build:
@@ -19,4 +22,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       working-directory: ${{ matrix.dir }}
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: 
+        docker build --file Dockerfile --tag $IMAGE_NAME
+        docker push crspringpetclinic.azurecr.io/$IMAGE_NAME
+
