--- a/.github/workflows/spring-petclinic-build-image.yml
+++ b/.github/workflows/spring-petclinic-build-image.yml
@@ -23,9 +23,9 @@ jobs:
     - name: Build the Docker image
       working-directory: ${{ matrix.dir }}
       run: 
-        docker build . --file Dockerfile --tag ${{ IMAGE_NAME }}
+        docker build . --file Dockerfile --tag $IMAGE_NAME
     
     - name: Push Docker image to ACR
       run: 
-        docker push crspringpetclinic.azurecr.io/${{ IMAGE_NAME }}
+        docker push crspringpetclinic.azurecr.io/$IMAGE_NAME
 
