--- a/.github/workflows/spring-petclinic-build-image.yml
+++ b/.github/workflows/spring-petclinic-build-image.yml
@@ -8,7 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: spring-petclinic:latest
+  IMAGE_NAME: spring-petclinic
+  IMAGE_VERSION: latest
 
 jobs:
 
@@ -23,9 +24,9 @@ jobs:
     - name: Build the Docker image
       working-directory: ${{ matrix.dir }}
       run: 
-        docker build . --file Dockerfile --tag $IMAGE_NAME
+        docker build . --file Dockerfile --tag $IMAGE_NAME:$IMAGE_VERSION
     
     - name: Push Docker image to ACR
       run: 
-        docker push crspringpetclinic.azurecr.io/$IMAGE_NAME
+        docker push crspringpetclinic.azurecr.io/$IMAGE_NAME:$IMAGE_VERSION
 
