Removed push main.

--- a/.github/workflows/spring-petclinic-build-image.yml
+++ b/.github/workflows/spring-petclinic-build-image.yml
@@ -23,9 +23,7 @@ jobs:
 
       - name: Build the Docker image
         working-directory: ${{ matrix.dir }}
-        run: 
-          docker build . --file Dockerfile --tag spring-petclinic:latest
+        run: docker build --file Dockerfile --tag spring-petclinic:latest
       
       - name: Push Docker image to ACR
-        run: 
-          docker image push crspringpetclinic.azurecr.io/spring-petclinic:latest
+        run: docker image push crspringpetclinic.azurecr.io/spring-petclinic:latest
