--- a/.github/workflows/spring-petclinic-build-image.yml
+++ b/.github/workflows/spring-petclinic-build-image.yml
@@ -6,21 +6,18 @@ on:
       - 'v*'
   workflow_dispatch:
 
-env:
-  IMAGE_NAME: spring-petclinic
-
 jobs:
 
+jobs:
   build:
-
-      runs-on: ubuntu-latest
-      strategy:
-        matrix: {dir: [./sampleapps/spring-petclinic]}
-
-      steps:
-      - name: Build the Docker image 
-      - uses: actions/checkout@v3
-        working-directory: ${{ matrix.dir }}
-        run: 
-          docker build --file Dockerfile --tag spring-petclinic:latest
-          docker image push crspringpetclinic.azurecr.io/spring-petclinic:latest
+    name: Build spring-petclinic
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: {dir: [./sampleapps/spring-petclinic]}
+    steps:
+    - name: Build the Docker image 
+    - uses: actions/checkout@v3
+      working-directory: ${{ matrix.dir }}
+      run: 
+        docker build --file Dockerfile --tag spring-petclinic:latest
+        docker image push crspringpetclinic.azurecr.io/spring-petclinic:latest
